# aiohttp-toolkit

./: .coveragerc  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
aiohttp_toolkit/: __init__.py  _handler.py  callback_builders.py  response_callbacks.py  response_models.py  types.py
aiohttp_utils/: README.md  __init__.py  _handler.py  _types.py  callback_builders.py  response_callbacks.py  response_models.py
examples/: custom_response_model.py  json.py  many_requests.py  oop.py  response_rejection.py  simple.py
tests/: config.py  conftest.py  test_handler.py
