[tool.poetry]
name = "aiohttp-utils"
version = "0.1.0"
description = ""
authors = ["ZGuyDev <77798764+ZGuyDev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.9.5"
yarl = "^1.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
