[tool.poetry]
name = "aiohttp-toolkit"
version = "0.1.1"
description = "aiohttp-toolkit - package to ease the process of handling aiohttp with premade functions"
license = "Apache-2.0"
authors = ["ZGuyDev <77798764+ZGuyDev@users.noreply.github.com>"]
readme = "README.md"
repository = "https://github.com/zguydev/aiohttp-toolkit"
keywords = ["aiohttp", "poetry"]
classifiers = ["Framework :: aiohttp"]
packages = [{ include = "aiohttp_toolkit" }]


[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.10.2"
yarl = "^1.9.4"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.8"
pytest-aiohttp = "^1.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
